[metadata]
name = python-esileapclient
summary = ESI-LEAP CLI
description-file = README.md

[files]
packages =
    esileapclient

[entry_points]
openstack.cli.extension =
    lease = esileapclient.osc.plugin

openstack.lease.v1 =
    esi_offer_list = esileapclient.osc.v1.offer:ListOffer
    esi_offer_create = esileapclient.osc.v1.offer:CreateOffer
    esi_offer_show = esileapclient.osc.v1.offer:ShowOffer
    esi_offer_delete = esileapclient.osc.v1.offer:DeleteOffer
    esi_offer_claim = esileapclient.osc.v1.offer:ClaimOffer

    esi_lease_list = esileapclient.osc.v1.lease:ListLease
    esi_lease_create = esileapclient.osc.v1.lease:CreateLease
    esi_lease_show = esileapclient.osc.v1.lease:ShowLease
    esi_lease_delete = esileapclient.osc.v1.lease:DeleteLease

    esi_owner_change_list = esileapclient.osc.v1.owner_change:ListOwnerChange
    esi_owner_change_create = esileapclient.osc.v1.owner_change:CreateOwnerChange
    esi_owner_change_show = esileapclient.osc.v1.owner_change:ShowOwnerChange
    esi_owner_change_delete = esileapclient.osc.v1.owner_change:DeleteOwnerChange

    esi_node_list = esileapclient.osc.v1.node:ListNode
