[metadata]
name = python-esileapclient
summary = ESI-LEAP CLI
description-file = README.md
license = Apache License, Version 2.0
author = ESI
author-email = esi@lists.massopen.cloud
python-requires = >=3.6
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    esileapclient

[entry_points]
openstack.cli.extension =
    lease = esileapclient.osc.plugin

openstack.lease.v1 =
    esi_event_list = esileapclient.osc.v1.event:ListEvent
    esi_lease_list = esileapclient.osc.v1.lease:ListLease
    esi_lease_create = esileapclient.osc.v1.lease:CreateLease
    esi_lease_show = esileapclient.osc.v1.lease:ShowLease
    esi_lease_delete = esileapclient.osc.v1.lease:DeleteLease
    esi_mdc_lease_list = esileapclient.osc.v1.mdc.mdc_lease:MDCListLease
    esi_mdc_offer_claim = esileapclient.osc.v1.mdc.mdc_offer:MDCClaimOffer
    esi_mdc_offer_list = esileapclient.osc.v1.mdc.mdc_offer:MDCListOffer
    esi_node_list = esileapclient.osc.v1.node:ListNode
    esi_offer_list = esileapclient.osc.v1.offer:ListOffer
    esi_offer_create = esileapclient.osc.v1.offer:CreateOffer
    esi_offer_show = esileapclient.osc.v1.offer:ShowOffer
    esi_offer_delete = esileapclient.osc.v1.offer:DeleteOffer
    esi_offer_claim = esileapclient.osc.v1.offer:ClaimOffer
